--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pandas>=2.2",
+    "polars>=1.36.1",
+    "requests>=2.32.5",
+    "websockets>=15.0.1",
+    "xgboost>=3.1.2",
 ]
