--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,10 @@ ipython_config.py
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
 #uv.lock
+UV_CACHE_DIR/
+CACHEDIR.TAG
+interpreter-v4/
+sdists-v9/
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
