--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pandas>=2.2",
     "polars>=1.36.1",
+    "pytest>=9.0.2",
     "requests>=2.32.5",
     "websockets>=15.0.1",
     "xgboost>=3.1.2",
