--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,15 @@ dependencies = [
     "polars>=1.36.1",
     "pytest>=9.0.2",
     "requests>=2.32.5",
+    "scikit-learn>=1.8.0",
     "websockets>=15.0.1",
     "xgboost>=3.1.2",
+]
+
+[tool.pytest.ini_options]
+norecursedirs = ["uv_cache", ".venv"]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.10",
 ]
